--- a/elbot/index.html
+++ b/elbot/index.html
@@ -101,7 +101,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Concrètement, Elbot c'est quoi?</h3>
             <p class="fst-normal">
-              Elbot est un bot discord créer et codé par <a href="https://el2zay.is-a.dev">el2zay</a> et codé aussi à l'aide de <a href="https://johan-stickman.is-a.dev">Johan</a>. <br> Il a des fonctions basique comme des commandes clear,say et infoserver. Il permet de diffuser de la musique dans des salons vocaux. Elbot est un bot principalement fun, il a plusieurs références française et il a plein d'autres fonctionnalités. Bien entendu Elbot est toujours en cours de développement et j'ajoute petit à petit des fonctions chaque semaines.<br>
+              Elbot est un bot discord créé et codé par <a href="https://el2zay.is-a.dev">el2zay</a> et codé aussi à l'aide de <a href="https://johan-stickman.is-a.dev">Johan</a>. <br> Il a des fonctions basiques comme des commandes clear,say et infoserver. Il permet de diffuser de la musique dans des salons vocaux. Elbot est un bot principalement fun, il a plusieurs références françaises et il a plein d'autres fonctionnalités. Bien entendu Elbot est toujours en cours de développement et j'ajoute petit à petit des fonctions chaque semaine.<br>
              Pour voir toutes les commandes vous pouvez voir la page <a href="#services">d'aide</a></li>
             </li></a>
             
@@ -126,9 +126,9 @@
 
         <div class="section-title">
           <h2>Page d'aide</h2>
-          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 07/11/2021 16h58]<br> <h8>39 commandes fonctionnelles et publiques.</h8></p>
+          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 14/11/2021 15h55]<br> <h8>42 commandes fonctionnelles et publiques.</h8></p>
         </div>
-<div><b>COMMANDE ÉCRITE</b></div>
+<div><b>COMMANDES ÉCRITES</b></div>
       
 <div class="row">
 
@@ -149,14 +149,28 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>chinese</h4>
-      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi mais où les caractères sont transformer en caractères chinois.<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b> <br> <b> Exepmle: </b> e!chinesse Bonjour Elbot répond: <br>书口冂丿口凵尺</p>
+      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi mais où les caractères sont transformés en caractères chinois.<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b> <br> <b> Exepmle: </b> e!chinesse Bonjour Elbot répond: <br>书口冂丿口凵尺</p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>embed</h4>
+      <p><b>Description : </b>Créer un embed à partir de elbot <h9><b>VERSION BETA </b></h9><br><b>Permission : </b>Envoyer un embed<br><b>WARN : </b>La séparation est § <b> <br>Exemple: </b>e!embed Ça c'est le titre§ça c'est la description§ça c'est le footer§et là, la couleur. (voir commande list_color)</p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>list_color</h4>
+      <p><b>Description : </b>Connaitre les couleurs disponibles pour elbot<br><b>Permission : </b>Envoyer un embed<br><b>WARN : </b>Si vous souhaitez faire la proposition d'une couleur n'hésitez pas contacter el2zay à l'aide de la commande e!contact.</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>contact</h4>
-      <p><b>Description : </b>Pour contacter el2zay via le bot<br><b>Permission : </b>Envoyer un message<br><b>WARN :</b>b Aucun</p>
+      <p><b>Description : </b>Pour contacter el2zay via le bot<br><b>Permission : </b>Envoyer un message<br><b>WARN :</b> Aucun</p>
     </div>
   </div>
 
@@ -170,7 +184,7 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>sondage</h4>
-      <p><b>Description : </b>Crée un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Envoyer un message et des réactions<br><b>WARN : </b>Aucun.</b></p>
+      <p><b>Description : </b>Créer un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Envoyer un message et des réactions<br><b>WARN : </b>Aucun.</b></p>
     </div>
   </div>
 
@@ -205,14 +219,14 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>number</h4>
-      <p><b>Description : </b>Pour avoir un nombre au hasard.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b> </p>
+      <p><b>Description : </b>Pour avoir un nombre au hasard.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>UNIQUEMENT EN SLASH</b> </p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>heberger</h4>
-      <p><b>Description : </b> Pour savoir sur quel hébergeur je suis héberger en ce moment!<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Peut ne pas être à jour automatiquement
+      <p><b>Description : </b> Pour savoir sur quel hébergeur je suis héberger en ce moment!<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Peut ne pas être à jour automatiquement</p>
     </div>
   </div>
 
@@ -362,6 +376,19 @@
     </div>
   </div>
 
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>pfc</h4>
+      <p><b>Description : </b>Faire un pierre feuille ciseaux<br><b>Permission : </b>Envoyer des messages.<br><b>Exemple : </b>e!pfc pierre </p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>qi</h4>
+      <p><b>Description : </b>Connaitre son QI ou celui d'un autre membre/bot du serveur.<br><b>Permission : </b>Envoyer des messages.<br><b>WARN:</b> Aucun </p>
+    </div>
+  </div>
+
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
@@ -376,7 +403,7 @@
       <p>Une idée de commande ? Envoyez un message sur un de mes réseaux sociaux que vous trouverez sur la  <a href="https://el2zay.is-a.dev">page principale</a> Vous pouvez regarder aussi les prochaines commandes de Elbot.</b> </p>
     </div>
   </div>
-  <div><b>COMMANDE MUSIQUE</b></div>
+  <div><b>COMMANDES MUSIQUE</b></div>
   <div class="row">
 
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
