--- a/elbot/index.html
+++ b/elbot/index.html
@@ -126,7 +126,7 @@
 
         <div class="section-title">
           <h2>Page d'aide</h2>
-          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 14/11/2021 15h55]<br> <h8>42 commandes fonctionnelles et publiques.</h8></p>
+          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 16/11/2021 19h16]<br> <h8>43 commandes fonctionnelles et publiques.</h8></p>
         </div>
 <div><b>COMMANDES ÉCRITES</b></div>
       
@@ -365,12 +365,6 @@
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
-      <h4>pfc</h4>
-      <p><b>Description : </b>Faire un pierre feuille ciseaux<br><b>Permission : </b>Envoyer des messages.<br><b>Exemple : </b>e!pfc pierre </p>
-    </div>
-  </div>
-  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
-    <div class="icon-box iconbox-blue">
       <h4>cuisiner</h4>
       <p><b>Description : </b>Faire un plat<br><b>Permission : </b>Envoyer des messages.<br><b>Exemple : </b>e!cuisine pâtes </p>
     </div>
@@ -386,6 +380,13 @@
     <div class="icon-box iconbox-blue">
       <h4>qi</h4>
       <p><b>Description : </b>Connaitre son QI ou celui d'un autre membre/bot du serveur.<br><b>Permission : </b>Envoyer des messages.<br><b>WARN:</b> Aucun </p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>reverse</h4>
+      <p><b>Description : </b>Lance un reverse<br><b>Permission : </b>Envoyer des messages.<br><b>WARN:</b> Aucun </p>
     </div>
   </div>
 
