--- a/elbot/index.html
+++ b/elbot/index.html
@@ -240,7 +240,7 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>clear</h4>
-      <p><b>Description : </b>Pour clear le nombre de message que vous souhaitiez <br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Max: 100</b>
+      <p><b>Description : </b>Pour clear le nombre de message que vous souhaitiez <br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Aucun</b>
     </div>
   </div>
 
@@ -274,7 +274,7 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>ban</h4>
-      <p><b>Description : </b>Pour débannir un membre sur un serveur<br><b>Permission : </b>Bannir un membre
+      <p><b>Description : </b>Pour bannir un membre sur un serveur<br><b>Permission : </b>Bannir un membre
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
@@ -317,14 +317,14 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>ticket</h4>
-      <p><b>Description : </b>Pour ouvrir un ticket<br><b>Permission : Aucune</b>.<br><b>WARN : </b>Disponible uniquement sur le serveur Elwatch </p>
+      <p><b>Description : </b>Pour ouvrir un ticket<br><b>Permission</b> : Aucune.<br><b>WARN : </b>Disponible uniquement sur le serveur Elwatch </p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>close</h4>
-      <p><b>Description : </b>Pour fermer un ticket<br><b>Permission : Aucune</b>.<br><b>WARN : </b>Disponible uniquement sur le serveur Elwatch </p>
+      <p><b>Description : </b>Pour fermer un ticket<br><b>Permission</b> : Aucune<br><b>WARN : </b>Disponible uniquement sur le serveur Elwatch </p>
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
