--- a/elbot/index.html
+++ b/elbot/index.html
@@ -266,6 +266,12 @@
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+  <div class="icon-box iconbox-blue">
+    <h4>calc</h4>
+    <p><b>Description : </b>Pour calculer...<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Seulement 2 nombres calculable.<br>Les "," sont des "."
+  </div>
+</div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>kick</h4>
       <p><b>Description : </b>Pour expulser un membre sur un serveur.<br><b>Permission : </b>Expulser un membre<br><b>WARN : </b>Aucun 
