--- a/inarretable/index.html
+++ b/inarretable/index.html
@@ -10,20 +10,27 @@
 	<link href="https://firebasestorage.googleapis.com/v0/b/storage-bf183.appspot.com/o/otherContent%2Fstyle.css?alt=media" rel="stylesheet">
 	<link href="https://firebasestorage.googleapis.com/v0/b/storage-bf183.appspot.com/o/otherContent%2Fgh-markdown.css?alt=media" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" rel="stylesheet">
-
-	<style>
-		body {
-			box-sizing: border-box;
-			min-width: 200px;
-			max-width: 980px;
-			margin: 0 auto;
-			padding: 45px;
-		}
-	</style>
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/@mdi/font@6.4.95/css/materialdesignicons.min.css">
 
 	<!-- Favicon -->
 	<link href="https://firebasestorage.googleapis.com/v0/b/storage-bf183.appspot.com/o/otherImages%2Felbot.png?alt=media" rel="icon">
 	<link href="https://firebasestorage.googleapis.com/v0/b/storage-bf183.appspot.com/o/otherImages%2Felbot.png?alt=media" rel="apple-touch-icon">
+
+    <style>
+            
+    h3 {font-family: "Poppins", sans-serif;
+    }
+    body {
+        box-sizing: border-box;
+        min-width: 200px;
+        max-width: 980px;
+        margin: 0 auto;
+        padding: 45px;
+    }
+
+
+    </style>
 </head>
 <body>
 	<article class="markdown-body">
@@ -49,5 +56,11 @@
 		<p><em>y'a aussi quelques autres languages sur le repo GitHub</em></p>
 		<a href="https://github.com/el2zay/inarretable" role="button" class="notLink btn btn-ghost bg-gray-800">eh toi, oui toi, clique bg</a> 
 	</article>
+
+    <button onclick='window.location.href = "https:\/\/el2zay.is-a.dev"' class="mt-96 fixed z-10 p-4 bg-base-100 rounded-full shadow-md bottom-5 left-5">
+        <span style="font-size: 1.25em;"><i class="mdi mdi-home"></i></span>
+    </button>
+    
+
 </body>
 </html>
